@@ -1,3 +1,11 @@
+2018-08-20  Tim Horton  <timothy_horton@apple.com>
+
+        Fix the iOSMac build with unified sources
+
+        * Shared/mac/ArgumentCodersMac.mm:
+        * Shared/mac/ChildProcessMac.mm:
+        * Shared/mac/NativeWebKeyboardEventMac.mm:
+
 2018-08-20  Eric Carlson  <eric.carlson@apple.com>
 
         [MediaStream] Move capture device monitoring to WebKit
